--- a/html/rent.html
+++ b/html/rent.html
@@ -33,7 +33,7 @@
                         <a class="nav-link text-white" href="../html/secondhand.html">Second hand</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../html/rent.html">Rent</a>
+                        <a class="nav-link text-white" href="rent.html">Rent</a>
                     </li>
                 </ul>
             </div>
@@ -44,11 +44,11 @@
         <div class="d-flex flex-wrap justify-content-center">
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del primer card -->
-                <a href="../img/contaxg1.jpg.jpg" data-bs-toggle="modal" data-bs-target="#modal1">
-                <img class="group list-group-image" src="../img/contaxg1.jpg.jpg" alt="" />
+                <a href="../img/d hand/Pentax espio mini.JPG" data-bs-toggle="modal" data-bs-target="#modal1">
+                <img class="group list-group-image" src="../img/d hand/Pentax espio mini.JPG" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax g1 - Gl -</h4>
+                    <h4 class="group inner list-group-item-heading">Pentax espio mini</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -64,11 +64,11 @@
 
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del segundo card -->
-                <a href="../img/contaxaria.jpg" data-bs-toggle="modal" data-bs-target="#modal2">
-                <img class="group list-group-image" src="../img/contaxaria.jpg" alt="" />
+                <a href="../img/d hand/rollei 35t.jpg" data-bs-toggle="modal" data-bs-target="#modal2">
+                <img class="group list-group-image" src="../img/d hand/rollei 35t.jpg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Contax Aria</h4>
+                    <h4 class="group inner list-group-item-heading">Rollei 35T</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -83,11 +83,11 @@
 
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
-                <a href="../img/nikon35ti.jpg" data-bs-toggle="modal" data-bs-target="#modal3">
-                 <img class="group list-group-image" src="../img/nikon35ti.jpg" alt="" />
+                <a href="../img/d hand/plaubel makina.jpg" data-bs-toggle="modal" data-bs-target="#modal3">
+                 <img class="group list-group-image" src="../img/d hand/plaubel makina.jpg" alt="" />
                 </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Nikon 35ti</h4>
+                    <h4 class="group inner list-group-item-heading">Plaubel Makina</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -101,11 +101,11 @@
             </div>
             <!-- Contenido del cuarto card -->
             <div class="item col-md-6 col-lg-4 mb-3">               
-                <a href="../img/leica m3 body.JPG" data-bs-toggle="modal" data-bs-target="#modal4">
-                <img class="group list-group-image" src="../img/leica m3 body.JPG" alt="" />
+                <a href="../img/d hand/summaron 35mm.jpg" data-bs-toggle="modal" data-bs-target="#modal4">
+                <img class="group list-group-image" src="../img/d hand/summaron 35mm.jpg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Leica m3 body</h4>
+                    <h4 class="group inner list-group-item-heading">Summaron 35mm</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -119,11 +119,11 @@
             </div>
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del quinto card -->
-                <a href="../img/zeissbiogon.JPG" data-bs-toggle="modal" data-bs-target="#modal5">
-            <img class="group list-group-image" src="../img/zeissbiogon.JPG" alt="" />
+                <a href="../img/d hand/summicron 35mm.JPG" data-bs-toggle="modal" data-bs-target="#modal5">
+            <img class="group list-group-image" src="../img/d hand/summicron 35mm.JPG" alt="" />
         </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">C zeiss Biogon</h4>
+                    <h4 class="group inner list-group-item-heading">Summicron 35mm</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -137,11 +137,11 @@
             </div>
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del sexto card -->
-                <a href="../img/leica elmar.JPG" data-bs-toggle="modal" data-bs-target="#modal6">
-                <img class="group list-group-image" src="../img/leica elmar.JPG" alt="" />
+                <a href="../img/d hand/fuji tiara.jpeg" data-bs-toggle="modal" data-bs-target="#modal6">
+                <img class="group list-group-image" src="../img/d hand/fuji tiara.jpeg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Leica Elmar</h4>
+                    <h4 class="group inner list-group-item-heading">Fuji Tiara</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -162,7 +162,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/contaxg1.jpg.jpg" class="img-fluid" alt="Contax G1">
+                <img src="../img/d hand/Pentax espio mini.JPG" class="img-fluid" alt="Pentax espio mini">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -176,7 +176,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/contaxaria.jpg" class="img-fluid" alt="Contax aria">
+                <img src="../img/d hand/rollei 35t.jpg" class="img-fluid" alt="Rollei 35">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -190,7 +190,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/nikon35ti.jpg" class="img-fluid" alt="Nikon 35ti">
+                <img src="../img/d hand/plaubel makina.jpg" class="img-fluid" alt="Nikon 35ti">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -203,7 +203,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/leica m3 body.JPG" class="img-fluid" alt="leica m3">
+                <img src="../img/d hand/summaron 35mm.jpg" class="img-fluid" alt="leica m3">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -216,7 +216,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/zeissbiogon.JPG" class="img-fluid" alt="zeissbiogon">
+                <img src="../img/d hand/summicron 35mm.JPG" class="img-fluid" alt="zeissbiogon">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -229,7 +229,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/leica elmar.JPG" class="img-fluid" alt="Leica elmar">
+                <img src="../img/d hand/fuji tiara.jpeg" class="img-fluid" alt="Fuji Tiara">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -248,8 +248,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-
-        
 </body>
 
 </html>
