--- a/html/contact.html
+++ b/html/contact.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="../html/secondhand.html">Second hand</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="../html/rent.html">Rent</a>
+                    </li>
                 </ul>
             </div>
         </div>
