--- a/html/secondhand.html
+++ b/html/secondhand.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="html/secondhand.html">Second hand</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="../html/rent.html">Rent</a>
+                    </li>
                 </ul>
             </div>
         </div>
