--- a/html/rent.html
+++ b/html/rent.html
@@ -44,11 +44,11 @@
         <div class="d-flex flex-wrap justify-content-center">
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del primer card -->
-                <a href="../img/d hand/Pentax espio mini.JPG" data-bs-toggle="modal" data-bs-target="#modal1">
-                <img class="group list-group-image" src="../img/d hand/Pentax espio mini.JPG" alt="" />
+                <a href="../img/Rent/canon 1v.jpeg" data-bs-toggle="modal" data-bs-target="#modal1">
+                <img class="group list-group-image" src="../img/Rent/canon 1v.jpeg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Pentax espio mini</h4>
+                    <h4 class="group inner list-group-item-heading">Canon 1V</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -64,11 +64,11 @@
 
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del segundo card -->
-                <a href="../img/d hand/rollei 35t.jpg" data-bs-toggle="modal" data-bs-target="#modal2">
-                <img class="group list-group-image" src="../img/d hand/rollei 35t.jpg" alt="" />
+                <a href="../img/Rent/carlzeissplanar45.jpeg" data-bs-toggle="modal" data-bs-target="#modal2">
+                <img class="group list-group-image" src="../img/Rent/carlzeissplanar45.jpeg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Rollei 35T</h4>
+                    <h4 class="group inner list-group-item-heading">Carl zeiss 35mm</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -83,11 +83,11 @@
 
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del tercer card -->
-                <a href="../img/d hand/plaubel makina.jpg" data-bs-toggle="modal" data-bs-target="#modal3">
-                 <img class="group list-group-image" src="../img/d hand/plaubel makina.jpg" alt="" />
+                <a href="../img/Rent/contax t2.jpeg" data-bs-toggle="modal" data-bs-target="#modal3">
+                 <img class="group list-group-image" src="../img/Rent/contax t2.jpeg" alt="" />
                 </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Plaubel Makina</h4>
+                    <h4 class="group inner list-group-item-heading">Contax t2</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -101,11 +101,11 @@
             </div>
             <!-- Contenido del cuarto card -->
             <div class="item col-md-6 col-lg-4 mb-3">               
-                <a href="../img/d hand/summaron 35mm.jpg" data-bs-toggle="modal" data-bs-target="#modal4">
-                <img class="group list-group-image" src="../img/d hand/summaron 35mm.jpg" alt="" />
+                <a href="../img/Rent/Fuji Klasse.jpeg" data-bs-toggle="modal" data-bs-target="#modal4">
+                <img class="group list-group-image" src="../img/Rent/Fuji Klasse.jpeg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Summaron 35mm</h4>
+                    <h4 class="group inner list-group-item-heading">Fuji Klasse</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -119,11 +119,11 @@
             </div>
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del quinto card -->
-                <a href="../img/d hand/summicron 35mm.JPG" data-bs-toggle="modal" data-bs-target="#modal5">
-            <img class="group list-group-image" src="../img/d hand/summicron 35mm.JPG" alt="" />
+                <a href="../img/Rent/Leica m2.jpeg" data-bs-toggle="modal" data-bs-target="#modal5">
+            <img class="group list-group-image" src="../img/Rent/Leica m2.jpeg" alt="" />
         </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Summicron 35mm</h4>
+                    <h4 class="group inner list-group-item-heading">Leica M2</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -137,11 +137,11 @@
             </div>
             <div class="item col-md-6 col-lg-4 mb-3">
                 <!-- Contenido del sexto card -->
-                <a href="../img/d hand/fuji tiara.jpeg" data-bs-toggle="modal" data-bs-target="#modal6">
-                <img class="group list-group-image" src="../img/d hand/fuji tiara.jpeg" alt="" />
+                <a href="../img/Rent/Leica m4p.jpeg" data-bs-toggle="modal" data-bs-target="#modal6">
+                <img class="group list-group-image" src="../img/Rent/Leica m4p.jpeg" alt="" />
             </a>
                 <div class="caption">
-                    <h4 class="group inner list-group-item-heading">Fuji Tiara</h4>
+                    <h4 class="group inner list-group-item-heading">Leica M4P</h4>
                     <p class="group inner list-group-item-text"></p>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
@@ -162,7 +162,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/Pentax espio mini.JPG" class="img-fluid" alt="Pentax espio mini">
+                <img src="../img/Rent/canon 1v.jpeg" class="img-fluid" alt="Canon 1v">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -176,7 +176,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/rollei 35t.jpg" class="img-fluid" alt="Rollei 35">
+                <img src="../img/Rent/carlzeissplanar45.jpeg" class="img-fluid" alt="planar 35mm">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -190,7 +190,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/plaubel makina.jpg" class="img-fluid" alt="Nikon 35ti">
+                <img src="../img/Rent/contax t2.jpeg" class="img-fluid" alt="contax t2">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -203,7 +203,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/summaron 35mm.jpg" class="img-fluid" alt="leica m3">
+                <img src="../img/Rent/Fuji Klasse.jpeg" class="img-fluid" alt="Fuji klasse">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -216,7 +216,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/summicron 35mm.JPG" class="img-fluid" alt="zeissbiogon">
+                <img src="../img/Rent/Leica m2.jpeg" class="img-fluid" alt="leica m2">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -229,7 +229,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <img src="../img/d hand/fuji tiara.jpeg" class="img-fluid" alt="Fuji Tiara">
+                <img src="../img/Rent/Leica m4p.jpeg" class="img-fluid" alt="leica m4-p">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
