--- a/html/secondhand.html
+++ b/html/secondhand.html
@@ -20,22 +20,26 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../html/inspiration.html">Film examples</a>
+                        <a class="nav-link text-white" href="inspiration.html">Film examples</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="../html/contact.html">Contact</a>
+                        <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../html/cameraslenses.html">Cameras & lenses</a>
+    
+                    <!-- Menú desplegable "Cameras & lenses" -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="outline: none;">
+                            Cameras
+                        </a>
+                        <div class="dropdown-menu bg-black" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item text-white" href="cameraslenses.html" style="background-color: transparent !important;">Cameras & lenses</a>
+                            <a class="dropdown-item text-white" href="secondhand.html" style="background-color: transparent !important;">Second hand</a>
+                            <a class="dropdown-item text-white" href="rent.html" style="background-color: transparent !important;">Rent</a>
+                        </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="html/secondhand.html">Second hand</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../html/rent.html">Rent</a>
-                    </li>
-                </ul>
+                    </ul>
             </div>
         </div>
     </nav>
