--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -247,7 +247,7 @@
         <div class="footer-wrapper">
             <div class="row">
                 <div class=" col-md-3">
-                    <p class="text-uppercase">Information</p>
+                    <p class="text-uppercase">Links</p>
                     <ul class="list-unstyled">
                         <li><a href="#">About Us</a></li>
                         <li><a href="#">Services</a></li>
