--- a/html/contact.html
+++ b/html/contact.html
@@ -83,20 +83,18 @@
             <div class="footer-wrapper">
                 <div class="row">
                     <div class=" col-md-3">
-                        <p class="text-uppercase">Information</p>
+                        <p class="text-uppercase">Links</p>
                         <ul class="list-unstyled">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Policy</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Team</a></li>
+                            <li><a href="../html/inspiration.html">Film inspiration</a></li>
+                            <li><a href="../html/cameraslenses.html">Cameras & lenses</a></li>
+                            <li><a href="../html/secondhand.html">Second hand</a></li>
+                            <li><a href="../html/rent.html">Rent</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
                         <p class="text-uppercase">Support</p>
                         <ul class="list-unstyled">
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Visit Us at this Address</a></li>
+                            <li><a href="../html/contact.html">Contact Us</a></li>
                             
                         </ul>
                     </div>
