--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <!-- Repite la estructura similar para el resto de las tarjetas -->
         </div>
     </div>
-    <!--Footer-->
+    <!--Footer prueba-->
 
     <div class="container-fluid bg-black">
         <div class="container">
