--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -59,7 +59,7 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="../html/checkout.html">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="../html/checkout.html">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6 mb-3">
-                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="../html/checkout.html">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="../html/checkout.html">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="../html/checkout.html">Add to cart</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                             <p class="lead">$21.000</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success btn-sm" href="http://www.jquery2dotnet.com">Add to cart</a>
+                            <a class="btn btn-success btn-sm" href="../html/checkout.html">Add to cart</a>
                         </div>
                     </div>
                 </div>
