--- a/html/inspiration.html
+++ b/html/inspiration.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/inspiration.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-GLhlTQ8iKJE3Ge5l7vZNUJkm+Or+DScQwezea0pzwoUqxyCBtL1PiB9HdL4N2x4N" crossorigin="anonymous">
+
     <title>Viva Film</title>
  
 </head>
