--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     
             <div class="col-md-4 col-sm-6 film">
                 <div class="card h-100 border-0">
-                    <a href="html/film.html">
+                    <a href="html/film-dos.html">
                     <div class="card-body">
                         <p class="card-text">35mm film</p>
 
