--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     
             <div class="col-md-4 col-sm-6 film">
                 <div class="card h-100 border-0">
-                    <a href="html/film.html">
+                    <a href="html/film-tres.html">
                     <div class="card-body">
                         <p class="card-text">Slide Film</p>
                         <!-- Contenido de la tarjeta 6 -->
