--- a/html/secondhand.html
+++ b/html/secondhand.html
@@ -38,6 +38,18 @@
                             <a class="dropdown-item text-white" href="rent.html" style="background-color: transparent !important;">Rent</a>
                         </div>
                     </li>
+                    <!-- Menú desplegable "Film" -->
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="outline: none;">
+                          Film
+                      </a>
+                      <div class="dropdown-menu bg-black" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item text-white" href="../html/film.html" style="background-color: transparent !important;">35mm</a>
+                          <a class="dropdown-item text-white" href="../html/film-dos.html" style="background-color: transparent !important;">Medium format</a>
+                          <a class="dropdown-item text-white" href="../html/film-tres.html" style="background-color: transparent !important;">Compact cameras</a>
+                      </div>
+                  </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
