--- a/html/checkout.html
+++ b/html/checkout.html
@@ -65,61 +65,55 @@
 
 
 
-<div class="h-screen bg-gray-100 pt-20">
-  <h1 class="mb-10 text-center text-2xl font-bold">Cart Items</h1>
-  <div class="mx-auto max-w-5xl justify-center px-6 md:flex md:space-x-6 xl:px-0">
-    <div class="rounded-lg md:w-2/3">
-      <div class="justify-between mb-6 rounded-lg bg-white p-6 shadow-md sm:flex sm:justify-start">
-        <img src="../img/d hand/rollei 35t.jpg" width="275pxpx" alt="product-image" class="w-full rounded-lg sm:w-40" />
-        <div class="sm:ml-4 sm:flex sm:w-full sm:justify-between">
-          <div class="mt-5 sm:mt-0">
-            <h2 class="text-lg font-bold text-gray-900">Rollei 35t</h2>
-            <p class="mt-1 text-xs text-gray-700">36EU - 4US</p>
-          </div>
-          <div class="mt-4 flex justify-between sm:space-y-6 sm:mt-0 sm:block sm:space-x-6">
-            <div class="flex items-center border-gray-100">
-              <span class="cursor-pointer rounded-l bg-gray-100 py-1 px-3.5 duration-100 hover:bg-blue-500 hover:text-blue-50"> - </span>
-              <input class="h-8 w-8 border bg-white text-center text-xs outline-none" type="number" value="2" min="1" />
-              <span class="cursor-pointer rounded-r bg-gray-100 py-1 px-3 duration-100 hover:bg-blue-500 hover:text-blue-50"> + </span>
-            </div>
-            <div class="flex items-center space-x-4">
-              <p class="text-sm">259.000 ₭</p>
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="h-5 w-5 cursor-pointer duration-150 hover:text-red-500">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-    </div>
-    <!-- Sub total -->
-    <div class="mt-6 h-full rounded-lg border bg-white p-6 shadow-md md:mt-0 md:w-1/3">
-      <div class="mb-2 flex justify-between">
-        <p class="text-gray-700">Subtotal</p>
-        <p class="text-gray-700">$129.99</p>
-      </div>
-      <div class="flex justify-between">
-        <p class="text-gray-700">Shipping</p>
-        <p class="text-gray-700">$4.99</p>
-      </div>
-      <hr class="my-4" />
-      <div class="flex justify-between">
-        <p class="text-lg font-bold">Total</p>
-        <div class="">
-          <p class="mb-1 text-lg font-bold">$134.98 USD</p>
-          <p class="text-sm text-gray-700">including VAT</p>
-        </div>
-      </div>
-      <button class="mt-6 w-full rounded-md bg-blue-500 py-1.5 font-medium text-blue-50 hover:bg-blue-600">Check out</button>
-    </div>
+<div class="container mt-5">
+  <h1 class="mb-4"></h1>
+  <div id="checkoutImages" class="row">
+    <!-- Aquí se mostrarán las imágenes del carrito -->
   </div>
 </div>
 
+<div class="mt-6 h-full rounded-lg border bg-white p-6 shadow-md md:mt-0 md:w-1/3 text-center">
+  <div class="mb-2 flex justify-between">
+    <p class="text-gray-700">Subtotal</p>
+    <p class="text-gray-700">$129.99</p>
+  </div>
+  <div class="flex justify-between">
+    <p class="text-gray-700">Shipping</p>
+    <p class="text-gray-700">$4.99</p>
+  </div>
+  <hr class="my-4" />
+  <div class="flex justify-between">
+    <p class="text-lg font-bold">Total</p>
+    <div class="">
+      <p class="mb-1 text-lg font-bold">$134.98 USD</p>
+      <p class="text-sm text-gray-700">including VAT</p>
+    </div>
+  </div>
+  <button class="mt-6 w-full rounded-md bg-blue-500 py-1.5 font-medium text-blue-50 hover:bg-blue-600">Check out</button>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
+<script>
+  // Cargar la información del elemento seleccionado del localStorage
+  const selectedItem = JSON.parse(localStorage.getItem('selectedItem'));
+
+  // Mostrar las imágenes en el contenedor de checkoutImages
+  if (selectedItem) {
+    const checkoutImagesContainer = document.getElementById('checkoutImages');
+
+    // Agregar las imágenes del elemento seleccionado al contenedor
+    selectedItem.imagenes.forEach((imagen, i) => {
+      const imageHTML = `
+        <div class="col-md-4 mb-4">
+          <img src="${imagen}" class="img-fluid" alt="Imagen de la película">
+        </div>
+      `;
+      checkoutImagesContainer.innerHTML += imageHTML;
+    });
+  }
+</script>
 </body>
 </html>
