--- a/html/film.html
+++ b/html/film.html
@@ -166,7 +166,7 @@ crossorigin="anonymous"></script>
     window.addToCart = function(index) {
       // Puedes personalizar la lógica para agregar el elemento al carrito aquí
       // Por ejemplo, enviar una solicitud al servidor o almacenar en localStorage
-      alert('Item added to cart!'); // Puedes personalizar este mensaje
+      //alert('Item added to cart!'); // Puedes personalizar este mensaje
 
       // Redirige a la página de checkout.html
       window.location.href = 'checkout.html';
