--- a/html/secondhand.html
+++ b/html/secondhand.html
@@ -82,19 +82,28 @@ crossorigin="anonymous"></script>
 
 
 
-</body>
-</html>
 <script>
-   $(document).ready(function() {
+  $(document).ready(function() {
+    let data;
+
     // Utiliza fetch para cargar el JSON de manera asíncrona
     fetch('../js/viva.json')
       .then(response => response.json())
-      .then(data => {
-        // Selecciona los elementos del array
-        const selectedData = data.slice(23, 28);
+      .then(dataResponse => {
+        // Asigna los datos para que estén disponibles globalmente
+        data = dataResponse;
 
-        // Itera sobre los elementos seleccionados del JSON
-        selectedData.forEach((card, index) => {
+        // Llama a la función para crear tarjetas y modales
+        createCardsAndModals();
+      })
+      .catch(error => console.error('Error al cargar el JSON:', error));
+
+    // Función para crear tarjetas y modales
+    function createCardsAndModals() {
+      // Itera sobre todos los elementos del JSON
+      data.forEach((card, index) => {
+        // Verifica si el índice está en el rango deseado
+        if (index >= 23 && index <= 27) {
           // Crea una tarjeta de Bootstrap para cada elemento del JSON
           var cardHTML = `
             <div class="col-md-4 card-container">
@@ -103,15 +112,15 @@ crossorigin="anonymous"></script>
                 <div class="card-body">
                   <h5 class="card-title">${card.titulo}</h5>
                   <p class="card-text">${card.contenido}</p>
-                  <button class="btn btn-primary" onclick="addToCart(${index + 3})">Add to Cart</button>
+                  <button class="btn btn-primary" onclick="addToCart(${index})">Add to Cart</button>
                 </div>
               </div>
             </div>
           `;
-  
+
           // Agrega la tarjeta al contenedor
           $('.row').append(cardHTML);
-  
+
           // Crea el modal dinámicamente y agrégalo al final del body
           var modalHTML = `
             <div class="modal fade" id="modal${index + 1}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -146,32 +155,36 @@ crossorigin="anonymous"></script>
               </div>
             </div>
           `;
-  
+
           // Agrega el modal al final del body
           $('body').append(modalHTML);
-        });
-  
-        // Después de crear todos los elementos, agrega un evento de clic a cada tarjeta
-        $('.card').on('click', function() {
-          // Obtén el ID del modal correspondiente
-          var modalID = $(this).data('bs-target');
-  
-          // Muestra el modal correspondiente
-          $(modalID).modal('show');
-        });
-      })
-      .catch(error => console.error('Error al cargar el JSON:', error));
+        }
+      });
+
+      // Después de crear todos los elementos, agrega un evento de clic a cada tarjeta
+      $('.card').on('click', function() {
+        // Obtén el ID del modal correspondiente
+        var modalID = $(this).data('bs-target');
+
+        // Muestra el modal correspondiente
+        $(modalID).modal('show');
+      });
+    }
 
     // Función para manejar la adición al carrito (puedes personalizar esta función)
     window.addToCart = function(index) {
-      // Puedes personalizar la lógica para agregar el elemento al carrito aquí
-      // Por ejemplo, enviar una solicitud al servidor o almacenar en localStorage
-      alert('Item added to cart!'); // Puedes personalizar este mensaje
+  // Obtiene el elemento correspondiente al índice
+  const selectedItem = data[index];
 
-      // Redirige a la página de checkout.html
-      window.location.href = 'checkout.html';
-    };
-});
+  // Puedes almacenar la información en localStorage o en una variable global
+  localStorage.setItem('selectedItem', JSON.stringify(selectedItem));
 
-    </script>
-    
+  // Redirige a la página de checkout.html
+  window.location.href = 'checkout.html';
+};
+
+  });
+</script>
+
+</body>
+</html>
