--- a/html/checkout.html
+++ b/html/checkout.html
@@ -65,7 +65,7 @@
 
 
 
-<!-- ... (encabezado y otras secciones) -->
+<!-- ... (encabezado y otras seccionessssss) -->
 
 <div class="container mt-5">
   <div class="row">
