--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
         </div>
     </nav>
     
-
+<a href="html/newcollection.html">
     <div class="img-container position-relative">
         <img src="img/camaras.webp" class="img-fluid" alt="...">
         <div class="text-overlay position-absolute top-50 start-50 translate-middle text-center text-white">
             <h1 class="display-4" style="margin-bottom: 20px;">CHECK OUR NEW COLLECTION</h1>
         </div>
     </div>
+</a>
 
     
 <a href="html/cameraslenses.html">
