--- a/html/checkout.html
+++ b/html/checkout.html
@@ -116,7 +116,7 @@
   </div>
 </div>
 
-<!-
+<footer>
 <div class="container-fluid bg-black">
   <div class="container">
       <div class="footer-wrapper">
@@ -161,6 +161,7 @@
   </div>
   
 </div>
+</footer>
 
 
       
