--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                         </div>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-white" href="html/newcollection.html">New collection</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="html/contact.html">Contact</a>
                     </li>
                     </ul>
