--- a/html/cameraslenses.html
+++ b/html/cameraslenses.html
@@ -49,7 +49,9 @@
                           <a class="dropdown-item text-white" href="../html/film-tres.html" style="background-color: transparent !important;">Compact cameras</a>
                       </div>
                   </li>
-                    
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="newcollection.html">New collection</a>
+                </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
