--- a/html/contact.html
+++ b/html/contact.html
@@ -53,6 +53,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="contact.html">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="newcollection.html">New collection</a>
+                    </li>
                     </ul>
             </div>
         </div>
